# kdegraphics-thumbnailer-dds

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bc7.hpp  ddsthumbnail.cpp  ddsthumbnail.desktop  ddsthumbnail.json  xmaciek.kdegraphics-thumbnailer-dds.metainfo.xml
